# senior-fullstack-engineer-takehome

./: README.md
emmit-script/: emmit.py  pyproject.toml
go-implementation/: go.mod  go.sum  main.go  main_test.go
go-implementation/broadcast/: broadcast.go
go-implementation/database/: migrations.go
go-implementation/db/migrations/: 001_create_users_table.up.sql
go-implementation/handlers/: context.go  day.go  health.go  ingest.go  range.go  updates.go
go-implementation/models/: data.go
rust-implementation/: Cargo.toml
rust-implementation/.sqlx/: query-4912fe8d033ef267af0b65e4f325300288ccc80c0484202abb5ca69150faeb85.json  query-e61c819198a6187257daf091f9dfa9ce833bddb4d3facaf02505f63f7c2c1d95.json
rust-implementation/src/: main.rs
rust-implementation/src/handlers/: mod.rs
rust-implementation/src/models/: mod.rs
rust-implementation/src/service/: mod.rs
