[package]
name = "challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "uuid", "chrono", "runtime-tokio", "bigdecimal"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
